--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ ORGIN="http://localhost:3000"
 
 # https://transportation-frontend-pro.vercel.app
 
-MONGO_URI="mongodb+srv://ragul8523947145:ragulhp2704@cluster0.jv5ddd1.mongodb.net/rock-fort?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://hydjaibalaji:jTYGfZ0OTo0NldsZ@cluster0.hvbxb8b.mongodb.net/"
 SECRET_KEY="abcd1234"
