--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # MONGO_URI="mongodb+srv://ragul8523947145:ragulhp2704@cluster0.d30d44u.mongodb.net/transport?retryWrites=true&w=majority"
 # MONGO_URI="mongodb+srv://JBTS:C8IPGKLWn4XkQc5Z@customers.as9lfau.mongodb.net/transport"
 PORT=8080
-ORGIN="http://localhost:3000"
+ORGIN="https://transport-jbr.vercel.app"
 
 # https://transportation-frontend-pro.vercel.app
 
