--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ ORGIN="https://transport-jbr.vercel.app"
 
 
 
-MONGO_URI="mongodb+srv://hydjaibalaji:jTYGfZ0OTo0NldsZ@jbr.6yqhomp.mongodb.net/"
+MONGO_URI="mongodb+srv://hydjaibalaji:jTYGfZ0OTo0NldsZ@cluster0.hvbxb8b.mongodb.net/"
 SECRET_KEY="abcd1234"
